--- a/assets/css/commercepage.css
+++ b/assets/css/commercepage.css
@@ -31,7 +31,7 @@ section,
   padding: 120px 0 60px 0;
   display: flex;
   align-items: center;
-  background: url(../img//imgfondoccomerce.png) no-repeat center center;
+  background: url(../img//imgfondoccomerce.webp) no-repeat center center;
   background-size: cover;
 }
 
@@ -208,7 +208,7 @@ margin-top: -10px;
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url('/assets/img/favicon_copia.png');
+  background-image: url('/assets/img/favicon_copia.webp');
   background-size: 50vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -397,7 +397,7 @@ margin-top: -10px;
 --------------------------------------------------------------*/
 
 #featured {
-  background: url(../img/imgfondoccomerce.png) no-repeat center center;
+  background: url(../img/imgfondoccomerce.webp) no-repeat center center;
   background-size: cover;
 height: auto;
 width: auto;
@@ -676,7 +676,7 @@ transition-duration: 100ms;
 }
 
 .modal-content {
-  background: url(../img/hero-bg.png);
+  background: url(../img/hero-bg.webp);
   margin: 10% auto;
   padding: 20px;
   border: 1px solid #000;
