--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,7 +243,7 @@ h1, h2, h3, h4, h5, h6 {
   .navmenu .dropdown ul {
     margin: 0;
     padding: 10px 0;
-    background: #3f63af;
+    background: linear-gradient(145deg, #3f63af, #26498a);
     display: block;
     position: absolute;
     visibility: hidden;
@@ -405,7 +405,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Global Footer */
 .footer {
   color: #fff;
-  background: linear-gradient(145deg, #253966, #26498a);
+  background: linear-gradient(145deg, #3f63af, #26498a);
   font-size: 14px;
   position: relative;
 }
@@ -2030,11 +2030,16 @@ section .row {
 
 /* YouTube Videos Section */
 #youtube-videos {
-  background-color: #234286;
+  background: linear-gradient(145deg, #3f63af, #26498a);
+
   padding: 60px 0;
 }
 #youtube-videos .section-title h2 {
   color: #ffffff;
+  margin-bottom: 0;
+}
+#youtube-videos .section-title h5 {
+  color: #ffffff !important;
   margin-bottom: 0;
 }
 #youtube-videos .section-title p {
