--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2500,7 +2500,24 @@ section .row {
   z-index: 1;
   overflow: hidden;
 }
+.cta-ai-upgrade-section2 {
+  background-color: #001f4d;
+  position: relative;
+  padding: 100px 0;
+  z-index: 1;
+  overflow: hidden;
+}
 
+.cta-ai-bg2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(0.4);
+  z-index: 0;
+}
 .cta-ai-bg {
   position: absolute;
   top: 0;
@@ -3162,3 +3179,4 @@ section .row {
   color: var(--accent-color);
   outline: none;
 }
+
