--- a/assets/css/cursos.css
+++ b/assets/css/cursos.css
@@ -2294,11 +2294,15 @@ section,
     transform: rotate(45deg) translateX(150%) scale(1.5);
   }
 }
+
+
 @media (max-width: 768px) {
   .book-call-btn {
     padding: 10px 20px !important;
     font-size: 0.9em;
     border-radius: 12px;
+    width: fit-content;
+    margin-block: 10px;
   }
   .book-call-content {
     gap: 8px;
@@ -2322,6 +2326,8 @@ section,
     transform: none;
   }
 }
+
+
 /* Book Call Button */
 .book-call-btn2 {
   position: relative;
